# FlvThumbnail

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/niu/flvthumbnail/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_niu_flvthumbnail_FlvUtil.cpp  com_niu_flvthumbnail_FlvUtil.h  native-lib.cpp
app/src/main/java/com/niu/flvthumbnail/: FlvUtil.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/niu/flvthumbnail/: ExampleUnitTest.java
